src/test/deca/context/invalid/created/class_incorrect_new4.deca
//Description :
// Initialisation invalide
//
// Resultats :
// Erreur

{
    A a = new B();
}
